--- a/action.yml
+++ b/action.yml
@@ -6,3 +6,7 @@ runs:
   steps:
     - run: ${{ github.action_path }}/entrypoint.sh
       shell: bash
+    - uses: actions/upload-artifact@v2
+      with:
+        name: metrics
+        path: metrics.mx
