--- a/action.yml
+++ b/action.yml
@@ -7,6 +7,7 @@ runs:
     - run: ${{ github.action_path }}/entrypoint.sh
       shell: bash
     - uses: actions/upload-artifact@v2
+      if: ${{ env.CMD == CHECK }}
       with:
         name: metrics
         path: metrics.mx
