--- a/action.yml
+++ b/action.yml
@@ -8,6 +8,7 @@ runs:
       run: ${{ github.action_path }}/entrypoint.sh
       shell: bash
     - name: upload artifact
+      if: ${{ env.cmd == 'CHECK' }}
       uses: actions/upload-artifact@v2
       with:
         name: metrics
